@startuml

title __SERVICE's Class Diagram__\n

  namespace Service {
    class Service.EmployeeService {
        {static} - logger : Logger
        + EmployeeService()
        + EmployeeService()
        + EmployeeService()
        + employeeLogin()
        + submitReimbursementRequest()
        + updateProfileInformation()
        + viewPendingReimbursementRequest()
        + viewProfileInformation()
        + viewResolvedReimbursementRequest()
    }
  }
  

  namespace Service {
    class Service.ManagerService {
        {static} - logger : Logger
        + ManagerService()
        + ManagerService()
        + ManagerService()
        + managerLogin()
        + processReimbursementRequest()
        + viewAllEmployees()
        + viewPendingRequestAllEmployee()
        + viewReimbursementRequestSingleEmployee()
        + viewResolvedRequestWithManager()
    }
  }
  

  Service.EmployeeService o-- JDBC.AuthenticationDao : authenticationDao
  Service.EmployeeService o-- JDBC.EmployeeDao : employeeDao
  Service.EmployeeService o-- JDBC.ReimbursementDao : reimbursementDao
  Service.ManagerService o-- JDBC.AuthenticationDao : authenticationDao
  Service.ManagerService o-- JDBC.EmployeeDao : employeeDao
  Service.ManagerService o-- JDBC.ReimbursementDao : reimbursementDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
